Fix spacing for multiple cards in hand

--- a/src/assets/css/run.css
+++ b/src/assets/css/run.css
@@ -171,6 +171,10 @@ button.advance:active {
 
 .hand-group .empty-pile {
   position: relative;
+  display: flex;
+  justify-content: center;
+  gap: 2em;
+  align-items: center;
 }
 
 .hand-group .flip-card {
